--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@types/lodash": "^4.17.5",
     "@uiw/react-color": "^2.3.0",
     "@uiw/react-color-wheel": "^2.3.0",
+    "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "monaco-editor": "^0.49.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
